Add config-eslint, config-tailwind, typescript-config/nextjs

--- a/apps/nabzkala/package.json
+++ b/apps/nabzkala/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "generate": "prisma generate",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -46,13 +47,13 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.394.0",
     "negotiator": "^0.6.3",
-    "next": "15.0.0-canary.29",
+    "next": "14.2.4",
     "next-intl": "^3.15.0",
     "next-themes": "^0.3.0",
     "postcss": "8.4.38",
     "prettier-plugin-tailwindcss": "^0.6.4",
-    "react": "19.0.0-rc-935180c7e0-20240524",
-    "react-dom": "19.0.0-rc-935180c7e0-20240524",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
     "react-intersection-observer": "^9.10.3",
@@ -63,7 +64,7 @@
     "swiper": "^11.1.4",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss": "4.0.0-alpha.15",
+    "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
     "typewriter-effect": "^2.21.0",
@@ -71,14 +72,14 @@
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
-  "overrides": {
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc"
-  },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.2.3",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/negotiator": "^0.6.3",
     "eslint": "9.4.0",
-    "eslint-config-next": "15.0.0-rc.0",
+    "eslint-config-next": "14.2.4",
     "husky": "^9.0.11",
     "prettier": "^3.3.2",
     "prisma": "^5.15.0",
