--- a/apps/nabzkala/package.json
+++ b/apps/nabzkala/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "prisma generate & next dev",
     "build": "next build",
     "start": "next start",
     "generate": "prisma generate",
@@ -16,73 +16,72 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@floating-ui/utils": "^0.2.2",
+    "@floating-ui/utils": "^0.2.6",
     "@formatjs/intl-localematcher": "^0.5.4",
-    "@headlessui/react": "^2.0.4",
-    "@heroicons/react": "^2.1.3",
-    "@hookform/resolvers": "^3.6.0",
-    "@prisma/client": "^5.15.0",
-    "@serwist/next": "^9.0.3",
-    "@tailwindcss/postcss": "4.0.0-alpha.6",
-    "@tanstack/react-table": "^8.17.3",
-    "@tanstack/react-virtual": "^3.5.1",
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.18.0",
+    "@repo/design-system": "workspace:*",
+    "@serwist/next": "^9.0.5",
+    "@tanstack/react-table": "^8.20.1",
+    "@tanstack/react-virtual": "^3.8.4",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.2",
+    "@types/node": "^22.1.0",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "autoprefixer": "10.4.19",
-    "axios": "^1.7.2",
+    "autoprefixer": "10.4.20",
+    "axios": "^1.7.3",
     "babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "cva": "1.0.0-beta.1",
     "d3": "^7.9.0",
     "date-fns": "^3.6.0",
-    "date-fns-jalali": "3.6.0-0",
-    "framer-motion": "^11.2.10",
+    "date-fns-jalali": "3.6.0-1",
+    "framer-motion": "^11.3.21",
     "fs-extra": "^11.2.0",
     "immer": "^10.1.1",
     "input-otp": "^1.2.4",
     "json-server": "1.0.0-beta.1",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.394.0",
+    "lucide-react": "^0.424.0",
     "negotiator": "^0.6.3",
-    "next": "14.2.4",
-    "next-intl": "^3.15.0",
+    "next": "14.2.5",
+    "next-intl": "^3.17.2",
     "next-themes": "^0.3.0",
-    "postcss": "8.4.38",
-    "prettier-plugin-tailwindcss": "^0.6.4",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.51.5",
-    "react-intersection-observer": "^9.10.3",
+    "react-hook-form": "^7.52.2",
+    "react-intersection-observer": "^9.13.0",
     "react-sticky-box": "^2.0.5",
     "recharts": "^2.12.7",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
-    "swiper": "^11.1.4",
+    "swiper": "^11.1.9",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss": "^3.4.4",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.4.5",
+    "typescript": "^5.5.4",
     "typewriter-effect": "^2.21.0",
     "utility-types": "^3.11.0",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.2.3",
+    "@next/eslint-plugin-next": "^14.2.5",
     "@repo/eslint-config": "workspace:*",
-    "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/postcss": "4.0.0-alpha.18",
     "@types/negotiator": "^0.6.3",
-    "eslint": "9.4.0",
-    "eslint-config-next": "14.2.4",
-    "husky": "^9.0.11",
-    "prettier": "^3.3.2",
-    "prisma": "^5.15.0",
-    "serwist": "^9.0.3"
+    "eslint": "9.8.0",
+    "eslint-config-next": "14.2.5",
+    "husky": "^9.1.4",
+    "prettier": "^3.3.3",
+    "prisma": "^5.18.0",
+    "serwist": "^9.0.5",
+    "tailwindcss": "4.0.0-alpha.18"
   }
 }
