--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "generate": "turbo run generate",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "dev:design-system": "turbo run dev --filter=@repo/design-system"
   },
   "packageManager": "pnpm@9.3.0",
   "engines": {
     "node": ">=18"
   },
   "devDependencies": {
-    "prettier": "^3.3.2",
-    "turbo": "^2.0.4",
-    "typescript": "^5.4.5"
+    "prettier": "^3.3.3",
+    "turbo": "^2.0.12",
+    "typescript": "^5.5.4"
   }
 }
