--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -9,15 +9,19 @@
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "eslint": "^8.57.0",
     "@repo/typescript-config": "workspace:*",
-    "tsup": "^8.0.2",
-    "typescript": "^5.3.3"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.8.0",
+    "tsup": "^8.2.4",
+    "typescript": "^5.5.4"
+  },
+  "type": "module",
+  "exports": {
+    ".": "./dist/index.js"
   },
   "dependencies": {
-    "react": "^18.2.0"
+    "react": "^18.3.1"
   },
   "publishConfig": {
     "access": "public"
